[package]
name = "warm-build-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
polars = { version = "0.37.0", features = [ "lazy", "csv", "ipc", "parquet", "streaming", "random", "ndarray", "temporal", "timezones", "strings", "object", "serde", "json", "decompress", "cse", "serde-lazy", "regex", "dot_diagram" ] }
