[package]
name = "warm-build-benchmark"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.88"
polars = { version = "0.34.1", features = [ "lazy", "csv", "ipc", "parquet", "streaming", "random", "ndarray", "temporal", "timezones", "strings", "object", "serde", "json", "decompress", "cse", "serde-lazy", "dot_diagram" ] }
